syntax = "proto3";
package rng;

import "google/api/annotations.proto";

message RngRequest {
    int32 length = 1;
}

message RngResponse {
    string random = 1;
}

service Rng {
    rpc GenerateRandom (RngRequest) returns (RngResponse) {
        option (google.api.http) = {
            post: "/v1/rng"
            body: "*"
        };
    }
}